# certify-be

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  index.js  lefthook.yml  main.py  models.py  package-lock.json  package.json  pyproject.toml  pyproject.toml.bak  requirements-dev.txt  requirements.txt  test_signature.b64
certificate-importer/: README.md  app.py  certificates_export.csv  names.txt  participants.csv  requirements.txt
models/: Certificate.js
scripts/: validate_commit_msg.py
src/: config.py  main.py
src/models/: __init__.py  bulk_import.py  certificate.py  newcertificate.py  signature.py
src/utils/: __init__.py  auth_utils.py  certificate_img_utils.py  common_utils.py  db_utils.py  logging_utils.py
tests/: __init__.py  conftest.py  test_api.py  test_utils.py
